<resources>
    <string name="app_name">CoffeeScape</string>
    <string name="splash_screen">Splash Screen CoffeeScape</string>
    <string name="landing_1_title">Welcome to CoffeeScape</string>
    <string name="landing_1_description">The revolutionary app that understands the importance of enjoying coffee aligned with your feelings. With our intelligent algorithm, we don\'t just offer a fresh cup of coffee, but we also tailor it to match your mood.</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet consectetur. Rhoncus magna arcu velit lorem sagittis magnis nisl tincidunt. Pretium amet lectus rhoncus natoque tortor aliquet id feugiat magna.</string>
    <string name="landing_2_title">Discover Coffee that Reflects You</string>
    <string name="landing_2_description">At CoffeeScape, we believe that coffee isn\'t just a drink but also a reflection of your state of mind. From the warmth to the awakening strength, we bring you a coffee experience that not only delights your taste buds but also speaks to your soul.</string>
    <string name="landing_3_title">Create Coffee Experiences Beyond Flavors</string>
    <string name="landing_3_description">We\'re changing the way you perceive and savor coffee. We don\'t just offer a beverage, we present an enjoyable and entertaining experience. With diverse options tailored to your feelings, we help you find coffee that uplifts, pampers, or celebrates your moments.</string>
    <string name="landing_4_title">CoffeeScape</string>
    <string name="slogan">Savor your sip!</string>
    <string name="register">Create Account</string>
    <string name="login">Log In</string>
    <string name="next">Next</string>
    <string name="register2">Create account</string>
    <string name="register3">Register</string>
    <string name="login2">Log in</string>
    <string name="have_account">Have an account?</string>
    <string name="previous">Previous</string>
    <string name="label_name">Name</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="hint_name">Your name</string>
    <string name="hint_email">Your email</string>
    <string name="hint_password">Your password</string>
    <string name="hint_confirm_password">Confirm your password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="title_activity_welcome">WelcomeActivity</string>

    <string name="placeholder_search">Search your coffee</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="register_fail">Registration failed</string>
    <string name="register_success">Registration success</string>
    <string name="confirm">Please confirm your password</string>
    <string name="confirm_not_same">Passwords do not match</string>
    <string name="back">Back</string>
    <string name="login_fail">Login failed</string>
    <string name="login_success">Login success</string>
    <string name="image_profile">Image Profile</string>
    <string name="your_favorite_coffee">Your Favorite Coffee</string>
    <string name="image_coffee">Image Coffee</string>
    <string name="best_coffee_for_you">Best Coffee For You</string>
    <string name="coffee_drinks_for_you">Coffee Drinks For You</string>
    <string name="recently_opened_coffee">Recently Opened Coffee</string>
    <string name="coffee_s_image">Coffee\'s Image</string>
    <string name="detail_coffee">Detail Coffee</string>
    <string name="coffee_for_your_mood">Coffee for Your Mood</string>
    <string name="the_coffee_searched_for_was_not_found">The coffee searched for was not found.</string>
    <string name="search_coffee">Search coffee</string>
</resources>