<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_welcome_scene"
    tools:context=".ui.landingpage.WelcomeActivity">

    <LinearLayout
        android:id="@+id/landingPage1"
        android:layout_width="wrap_content"
        android:layout_height="550dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/landingPage1Title"
            android:layout_width="224dp"
            android:layout_height="83dp"
            android:text="@string/landing_1_title"
            android:textSize="26sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/landingPage1Image"
            android:layout_width="283dp"
            android:layout_height="302dp"
            android:layout_marginTop="24dp"
            android:scaleType="centerCrop"
            android:src="@drawable/landingpage1_image" />

        <TextView
            android:id="@+id/landingPage1Description"
            android:layout_width="283dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/lorem_ipsum"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/landingPage2"
        android:layout_width="wrap_content"
        android:layout_height="550dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal">

        <ImageView
            android:id="@+id/landingPage2Image"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/landingpage2_image" />

        <TextView
            android:id="@+id/landingPage2Title"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/landing_2_title"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/landingPage2Description"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/lorem_ipsum"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/landingPage3"
        android:layout_width="wrap_content"
        android:layout_height="550dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal">

        <TextView
            android:id="@+id/landingPage3Title"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:text="@string/landing_3_title"
            android:textSize="26sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/landingPage3Image"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:src="@drawable/landingpage3_image" />

        <TextView
            android:id="@+id/landingPage3Description"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/lorem_ipsum"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/landingPage4"
        android:layout_width="wrap_content"
        android:layout_height="550dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/LandingPage4Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/landing_4_title"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/Landing4PageSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slogan"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <ImageView
            android:id="@+id/landingPage4Image"
            android:layout_width="300dp"
            android:layout_height="290dp"
            android:src="@drawable/landingpage4_image"
            android:layout_marginTop="18dp" />

        <Button
            android:id="@+id/createAccountButton"
            android:layout_width="180dp"
            android:layout_height="48dp"
            android:layout_marginTop="48dp"
            android:layout_gravity="center"
            android:text="@string/register2"
            android:textSize="14sp"
            android:backgroundTint="@color/brown" />

        <TextView
            android:id="@+id/haveAccountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/have_account"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="180dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:text="@string/login2"
            android:textSize="14sp"
            android:backgroundTint="@color/brown"
            android:layout_marginTop="4dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bullet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="574dp"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/menu1"
            android:layout_width="10dp"
            android:layout_height="10dp"
            app:altSrc="@drawable/baseline_circle_24"
            app:layout_constraintEnd_toStartOf="@+id/menu2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/grey_circle_24" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/menu2"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginStart="8dp"
            app:altSrc="@drawable/baseline_circle_24"
            app:layout_constraintEnd_toStartOf="@+id/menu3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/menu1"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/grey_circle_24" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/menu3"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginStart="8dp"
            app:altSrc="@drawable/baseline_circle_24"
            app:layout_constraintEnd_toStartOf="@+id/menu4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/menu2"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/grey_circle_24" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/menu4"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginStart="8dp"
            app:altSrc="@drawable/baseline_circle_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/menu3"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/grey_circle_24" />
    </LinearLayout>

    <Button
        android:id="@+id/previousButton"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:text="@string/previous"
        android:textSize="14sp"
        android:backgroundTint="@color/brown"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/bullet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guidelineVertical"/>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:text="@string/next"
        android:textSize="14sp"
        android:backgroundTint="@color/brown"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/bullet"
        app:layout_constraintStart_toEndOf="@id/guidelineVertical"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.06"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>